# Rust-practice

./: .gitignore
actixWs/: .gitignore  Cargo.toml
actixWs/src/: connect.rs  lobby.rs  main.rs  messages.rs  server.rs
actix_diesel/: Cargo.toml
actix_diesel/migrations/2023-03-30-051243_actix-diesel/: down.sql  up.sql
actix_diesel/src/: lib.rs  main.rs  run.rs  schema.rs
actix_diesel/src/models/: user_schema.rs
actix_diesel/src/routes/: add_task.rs  mod.rs
actix_sqlx/: .gitignore  Cargo.toml  readme.md
actix_sqlx/src/: lib.rs  main.rs  run.rs  schema.sql
actix_sqlx/src/models/: model.rs
actix_sqlx/src/routes/: create_task.rs  mod.rs  read_task.rs  update_task.rs
advanced-trait/src/: main.rs
axumWs/: Cargo.toml
axumWs/src/: main.rs
config_crate_testing/: Cargo.toml  config.yaml
config_crate_testing/configuration/: base.yaml  config.yaml
config_crate_testing/src/: main.rs
custom-derive-macro/: Cargo.toml
custom-macros/custom-derive-macro/: Cargo.toml
custom-macros/custom-derive-macro/src/: main.rs
custom-macros/custom-proc-macro/: Cargo.toml
custom-macros/custom-proc-macro/src/: lib.rs
diesel_demo/: .env
diesel_demo/src/: lib.rs  model.rs
dyn_usage/dyn_dispatch/: Cargo.toml
dyn_usage/dyn_dispatch/src/: main.rs
dyn_usage/trait_obj_creation/: Cargo.toml
dyn_usage/trait_obj_creation/src/: main.rs
dyn_usage/type_erasure/: Cargo.toml
dyn_usage/type_erasure/src/: main.rs
error-stack/: Cargo.toml
grpc-demo-tonic/: Cargo.toml
grpc-demo-tonic/proto/: hello.proto
grpc-demo-tonic/src/: client.rs  server.rs
jwt_token/: Cargo.toml
jwt_token/src/: main.rs
linked-list/src/: main.rs  utils.rs
linked-list/tests/: lib_test.rs  mod.rs
msg-passing-in-thread/: Cargo.toml
msg-passing-in-thread/src/: main.rs
multithreaded-web-server/: Cargo.toml
multithreaded-web-server/src/: lib.rs  main.rs
password_generator/: Cargo.toml
password_generator/src/: main.rs
rust-axum/: Cargo.toml
rust-axum/src/: main.rs  routes.rs
rust-docker/: Cargo.toml  dockerfile
rust-redis/: Cargo.toml
rust-redis/src/: main.rs
rust-type-conversion/: Cargo.toml
rust-type-conversion/src/: main.rs
rust-yew/: Cargo.toml
rust-yew-websocket/: Cargo.toml  bootstrap.js  index.html  package-lock.json  package.json  webpack.config.js
rust-yew-websocket/src/: lib.rs  main.rs
rust-yew-websocket/src/component/: chat.rs  login.rs
rust-yew-websocket/src/services/: event_bus.rs  mod.rs
rust-yew/src/: app.rs  main.rs
rust-yew/src/component/: util.rs
sym_crypto/: Cargo.toml  key.pem  private.pem  pub_key.der  pubkey.pem
sym_crypto/src/: main.rs
tungstenite_crate/: Cargo.toml
tungstenite_crate/src/: main.rs  model.rs
