[package]
name = "actix_diesel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lib"
path = "src/lib.rs"
[dependencies]
actix-web = "4.3.1"
diesel = { version = "2.0.3", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
r2d2 = "0.8.10"
serde = { version = "1.0.159", features = ["derive"] }
