[package]
name = "actix_sqlx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
actix-web = "4.0"
dotenv = "0.15.0"
serde = { version = "1.0.159", features = ["derive"] }
sqlx = { version = "0.5", features = [  "runtime-async-std-native-tls", "postgres" ] }

