[package]
name = "grpc-demo-tonic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "2.17"
httpbis = { git = "https://github.com/stepancheg/rust-http2" }
grpc ="*"
grpc-protobuf="*"
futures = "0.3.29"

[build-dependencies]
protoc-rust-grpc = "*"

# server binary
[[bin]]
    name = "server"
    path = "src/server.rs"

# client binary
[[bin]]
    name = "client"
    path = "src/client.rs"
